--- a/css/styles.css
+++ b/css/styles.css
@@ -612,6 +612,10 @@ progress {
   height: auto;
 }
 
+.img-thumbnail:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+
 .figure {
   display: inline-block;
 }
@@ -3030,27 +3034,27 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #E17F4E;
+  border-color: #E17F4E;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #0b5ed7;
-  border-color: #0a58ca;
+  background-color: #e17f4e83;
+  border-color: #E17F4E;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
-  background-color: #0b5ed7;
-  border-color: #0a58ca;
-  box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
+  background-color: #E17F4E;
+  border-color: #E17F4E;
+  box-shadow: 0 0 0 0.25rem rgba(253, 165, 49, 0.5);
 }
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #0a58ca;
-  border-color: #0a53be;
+  background-color: #E17F4E;
+  border-color: #E17F4E;
 }
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(253, 165, 49, 0.5);
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #fff;
@@ -3419,19 +3423,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-light {
-  color: #f8f9fa;
-  border-color: #f8f9fa;
+  color: #E17F4E;
+  border-color: #E17F4E;
 }
 .btn-outline-light:hover {
-  color: #000;
-  background-color: #f8f9fa;
-  border-color: #f8f9fa;
+  color: #f8f9fa;
+  background-color: #E17F4E;
+  border-color: #E17F4E;
 }
 .btn-check:focus + .btn-outline-light, .btn-outline-light:focus {
   box-shadow: 0 0 0 0.25rem rgba(248, 249, 250, 0.5);
 }
 .btn-check:checked + .btn-outline-light, .btn-check:active + .btn-outline-light, .btn-outline-light:active, .btn-outline-light.active, .btn-outline-light.dropdown-toggle.show {
-  color: #000;
+  color: #E17F4E;
   background-color: #f8f9fa;
   border-color: #f8f9fa;
 }
@@ -3481,9 +3485,10 @@ textarea.form-control-lg {
 }
 
 .btn-lg, .btn-group-lg > .btn {
-  padding: 0.5rem 1rem;
+  font-weight:550;
+  padding: .75rem 1rem;
   font-size: 1.25rem;
-  border-radius: 0.3rem;
+  border-radius: 25px;
 }
 
 .btn-sm, .btn-group-sm > .btn {
@@ -4055,6 +4060,8 @@ textarea.form-control-lg {
   font-size: 1.25rem;
   text-decoration: none;
   white-space: nowrap;
+  height:auto;
+  width:auto;
 }
 .navbar-nav {
   display: flex;
@@ -7768,6 +7775,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-navy {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-navy-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-body {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-body-color-rgb), var(--bs-text-opacity)) !important;
@@ -11324,7 +11336,6 @@ html {
   margin: 4px -5px 4px 15px;
   cursor: pointer;
   background-color: #454F84;
-  border-radius:15px;
 }
 
 .collapse .contact-button{
