--- a/css/styles.css
+++ b/css/styles.css
@@ -839,7 +839,7 @@ progress {
 
 .g-0,
 .gx-0 {
-  --bs-gutter-x: 0;
+  --bs-gutter-x: 0 !important;
 }
 
 .g-0,
@@ -3060,8 +3060,8 @@ textarea.form-control-lg {
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #454F84;
+  border-color: #454F84;
 }
 
 .btn-secondary {
